--- a/App/templates/user/login.html
+++ b/App/templates/user/login.html
@@ -32,6 +32,7 @@
                             <label class="form-label" for="typePasswordX-2">Пароль</label>
                         </div>
                         <button class="btn btn-primary btn-lg btn-block" type="submit">Войти</button>
+                        <a class="btn btn-primary btn-lg btn-block" href="/register">Регистрация</a>
                         <hr class="my-4">
                     </form>
                 </div>
