--- a/App/templates/user/dashboard.html
+++ b/App/templates/user/dashboard.html
@@ -191,6 +191,7 @@
                     </div>
                     {% endfor %}
                 </div>
+                <button class="btn btn-outline-primary" href="#">Commit</button>
                 <div class="row gy-4">
 
 
