--- a/App/templates/user/register.html
+++ b/App/templates/user/register.html
@@ -28,6 +28,26 @@
                             <label class="form-label" for="typeEmailX-2">Ник</label>
                         </div>
                         <div class="form-outline mb-4">
+                            <input type="text" id="surname" name="surname" class="form-control form-control-lg"/>
+                            <label class="form-label" for="typeEmailX-2">Фамилия</label>
+                        </div>
+                         <div class="form-outline mb-4">
+                            <input type="text" id="email" name="email" class="form-control form-control-lg"/>
+                            <label class="form-label" for="typeEmailX-2">email</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" id="defaultCheck1" type="checkbox" checked="">
+                            <label class="form-check-label" for="defaultCheck1">Ты тим-лид?</label>
+                          </div>
+                         <div class="form-outline mb-4">
+                            <input type="text" id="telegram" name="telegram" class="form-control form-control-lg"/>
+                            <label class="form-label" for="typeEmailX-2">telegram</label>
+                        </div>
+                        <div class="form-outline mb-4">
+                            <input type="text" id="specialization" name="specialization" class="form-control form-control-lg"/>
+                            <label class="form-label" for="typeEmailX-2">specialization</label>
+                        </div>
+                        <div class="form-outline mb-4">
                             <input type="password" id="password" name="password" class="form-control form-control-lg"/>
                             <label class="form-label" for="typePasswordX-2">Пароль</label>
                         </div>
