--- a/App/templates/user/register.html
+++ b/App/templates/user/register.html
@@ -28,6 +28,10 @@
                             <label class="form-label" for="typeEmailX-2">Ник</label>
                         </div>
                         <div class="form-outline mb-4">
+                            <input type="text" id="name" name="name" class="form-control form-control-lg"/>
+                            <label class="form-label" for="typeEmailX-2">Имя</label>
+                        </div>
+                        <div class="form-outline mb-4">
                             <input type="text" id="surname" name="surname" class="form-control form-control-lg"/>
                             <label class="form-label" for="typeEmailX-2">Фамилия</label>
                         </div>
