--- a/App/templates/user/register.html
+++ b/App/templates/user/register.html
@@ -37,7 +37,7 @@
                         </div>
                          <div class="form-outline mb-4">
                             <input type="text" id="email" name="email" class="form-control form-control-lg"/>
-                            <label class="form-label" for="typeEmailX-2">email</label>
+                            <label class="form-label" for="typeEmailX-2">Электронная почта</label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" id="defaultCheck1" type="checkbox" checked="">
@@ -45,19 +45,20 @@
                           </div>
                          <div class="form-outline mb-4">
                             <input type="text" id="telegram" name="telegram" class="form-control form-control-lg"/>
-                            <label class="form-label" for="typeEmailX-2">telegram</label>
+                            <label class="form-label" for="typeEmailX-2">Ссылка на телеграм</label>
                         </div>
                         <div class="form-outline mb-4">
                             <input type="text" id="specialization" name="specialization" class="form-control form-control-lg"/>
-                            <label class="form-label" for="typeEmailX-2">specialization</label>
+                            <label class="form-label" for="typeEmailX-2">Твоя специальзация</label>
                         </div>
                         <div class="form-outline mb-4">
                             <input type="password" id="password" name="password" class="form-control form-control-lg"/>
                             <label class="form-label" for="typePasswordX-2">Пароль</label>
                         </div>
-                        <button class="btn btn-primary btn-lg btn-block" type="submit">Войти</button>
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">Зарегестрироваться</button>
                         <hr class="my-4">
                     </form>
+                    <a class="btn btn-primary btn-lg btn-block" href='/login'>Войти</a>
                 </div>
             </div>
         </div>
