--- a/App/templates/user/register.html
+++ b/App/templates/user/register.html
@@ -40,7 +40,7 @@
                             <label class="form-label" for="typeEmailX-2">Электронная почта</label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" id="defaultCheck1" type="checkbox" checked="">
+                            <input class="form-check-input" name="is_team_lead" id="defaultCheck1" type="checkbox" checked="">
                             <label class="form-check-label" for="defaultCheck1">Ты тим-лид?</label>
                           </div>
                          <div class="form-outline mb-4">
