--- a/App/templates/user/dashboard.html
+++ b/App/templates/user/dashboard.html
@@ -64,6 +64,11 @@
                     <use xlink:href="#real-estate-1"></use>
                 </svg>
                 <span>Добавить задачу </span></a></li>
+            <li class="sidebar-item"><a class="sidebar-link" href="index.html">
+                <svg class="svg-icon svg-icon-sm svg-icon-heavy">
+                    <use xlink:href="#real-estate-1"></use>
+                </svg>
+                <span>Написать Телеграмм-боту </span></a></li>
             <li class="sidebar-item"><a class="sidebar-link" href="#tablesDropdown" data-bs-toggle="collapse">
                 <svg class="svg-icon svg-icon-sm svg-icon-heavy">
                     <use xlink:href="#portfolio-grid-1"></use>
